# DIMClient

./: CMakeCache.txt  CMakeLists.txt  Makefile  MyProject  cmake_install.cmake
dim/: .setup  README_v20.txt  makefile_common  makefile_did  setup.bash
dim/Visual/: benchClient.vcxproj  benchServer.vcxproj  cpp_client.vcxproj  cpp_server.vcxproj  demo_client.vcxproj  demo_server.vcxproj  dim.vcxproj  dimBridge.vcxproj  dimStd.vcxproj  dim_get_service.vcxproj  dim_send_command.vcxproj  dns.vcxproj  jdim.vcxproj  pvss_dim_client.vcxproj  pvss_dim_server.vcxproj  rpc_client.vcxproj  rpc_server.vcxproj  test_client.vcxproj  test_server.vcxproj  webDid.vcxproj  webDim.vcxproj
dim/bin32/: dim.exp  dim.lib  dimBridge.exp  dimBridge.lib  jdim.exp  jdim.lib
dim/linux/: DimBridge  checkDimServers  checkDns  did  dim_get_service  dim_get_service_names  dim_get_services  dim_send_command  dns  testClient  testServer  test_client  test_server  webDid
dim/src/: conn_handler_frank.c  dic.c  dic.c~  diccpp.cxx  dim_thr.c  dimcpp.cxx  dis.c  dis.c~  discpp.cxx  dna.c  dna_frank.c  dtq.c  open_dns.c  tcpip.c  utilities.c  utilities.c~
dim/src/did/: did.c  did.c~
dim/src/examples/: dim_fork2.cxx  pvss_dim_server.cxx  test_client.c  test_client.cxx_  test_client.cxx_cms  test_server.c  test_server.cxx  test_server.cxx_cms  test_server.c~
dim/src/util/: dim_get_service_names.cxx  dim_get_services.cxx  dimbridge.cxx  dimbridge.cxx~
dim/src/webDIM/: crypto.hpp  server_ws.hpp  ws_examples.cpp
dim/src/webDid/: webDid.c
src/: main.cpp
